<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prometheus_req_py</name>
  <version>1.0.0</version>
  <description>Package containing nodes that implements Equipment Requests call </description>
  <maintainer email="davidepaossi@gmail.com">Davide Paossi</maintainer>
  <license>Custom MIT License</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyads</exec_depend>
  <exec_depend>getpass</exec_depend>
  <exec_depend>requests</exec_depend>
  <depend>prometheus_req_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
